fix(studio) sticker flickering

--- a/srcs/public/css/styles.css
+++ b/srcs/public/css/styles.css
@@ -209,6 +209,7 @@ main.container {
 	opacity: 0;
 	transition: opacity 0.3s;
 	background: linear-gradient(to top, rgba(0,0,0,0.5) 0%, transparent 60%);
+	pointer-events: none;
 }
 
 .gallery-item:hover .overlay {
@@ -825,7 +826,7 @@ footer a:hover {
 	width: 14px;
 	height: 14px;
 	background: #ffffff;
-	border: 2px sold var(--pink);
+	border: 2px solid var(--pink);
 	border-radius: 50%;
 	display: none;
 	z-index: 100;
